--- a/index.html
+++ b/index.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Word Counter App </title>
    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-   
+
+   <div class="box">
+      <h1>Word Counter</h1>
+      <textarea name="text" id="userInput" oninput="CharCount()" placeholder="Enter your text  "></textarea>
+      <div id="outPut">
+         <H2>Total Characters</H2>
+         <button type="button" id="Char">0</button>
+      </div>
+   </div>
+
    <script src="script.js"></script>
 </body>
+
 </html>
