Second module Finish

--- a/index.html
+++ b/index.html
@@ -12,11 +12,20 @@
 
    <div class="box">
       <h1>Word Counter</h1>
-      <textarea name="text" id="userInput" oninput="CharCount()" placeholder="Enter your text  "></textarea>
-      <div id="outPut">
-         <H2>Total Characters</H2>
-         <button type="button" id="Char">0</button>
+      <textarea name="text" id="userInput" oninput="CharCount()"  placeholder="Enter your text  "></textarea>
+      <div class="outPut">
+         <span>
+            <H2>Total Characters :- <span id="Char" ></span></H2>
+         </span>
+         <span>
+            <H2>Total Words :- <span id="Words" ></span></H2>
+         </span>
+         <span>
+            <H2>Total Numbers :- <span id="Number" ></span></H2>
+         </span>
       </div>
+   </div>
+
    </div>
 
    <script src="script.js"></script>
